# rules-engine

./: .coveragerc  .envrc  .flake8  .gitignore  .gitlab-ci.yml  .pdm.toml  .pre-commit-config.yaml  Dockerfile  README.md  package-lock.json  pyproject.toml  setup.cfg
main/: rules_engine.py
main/rules/: base_rules.py
tests/: test_base_rules.py  test_rules_engine.py
tests/resources/: test_rules_config.yml  test_rules_engine_correct.json  test_rules_input_raw.json
