[project]
name = ""
version = ""
description = ""
authors = [
    {name = "simonbutt-datatonic", email = "simon.butt@datatonic.com"},
]
dependencies = ["pytest~=6.2"]
requires-python = ">=3.8"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""


[project.optional-dependencies]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = ["black~=21.6b0", "pytest-cov~=2.12", "flake8~=3.9"]
