[project]
name = "rules-api"
version = "0.1.0"
description = ""
authors = [
    {name = "simonbutt-datatonic", email = "simon.butt@datatonic.com"},
]
dependencies = []
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""


[project.optional-dependencies]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black~=21.6b0",
    "flake8~=3.9",
    "pytest-cov~=2.12",
    "setuptools~=57.0",
    "build~=0.5",
    "twine~=3.4",
]
