[metadata]
name = datatonic-simon
version = 0.1.0
author = Simon Butt
author_email = simon.butt@datatonic.com
description = Rules engine designed of NoSQL code
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/test.pypi/rules-engine
project_urls =
    Bug Tracker = https://github.com/pypi/rules-engine/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
